Hopefully fixed material animations.